[package]
name = "website"
version = "0.1.0"
edition = "2021"
description = "Website for Ecrous framework"
readme = "README.md"
repository = "https://github.com/ecrous/website"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "ecrous", "website"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
